RESOLVED FIXED208851
Do not create a service worker connection if service worker is not enabled in network process
https://bugs.webkit.org/show_bug.cgi?id=208851
Summary Do not create a service worker connection if service worker is not enabled in...
youenn fablet
Reported 2020-03-10 03:05:05 PDT
Do not create a service worker connection if service worker is not enabled in network process
Attachments
Patch (6.70 KB, patch)
2020-03-10 03:15 PDT, youenn fablet
no flags
youenn fablet
Comment 1 2020-03-10 03:07:32 PDT
youenn fablet
Comment 2 2020-03-10 03:15:39 PDT
WebKit Commit Bot
Comment 3 2020-03-10 09:27:46 PDT
Comment on attachment 393130 [details] Patch Clearing flags on attachment: 393130 Committed r258213: <https://trac.webkit.org/changeset/258213>
WebKit Commit Bot
Comment 4 2020-03-10 09:27:48 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.