Do not create a service worker connection if service worker is not enabled in network process https://bugs.webkit.org/show_bug.cgi?id=208851

Reviewed by Simon Fraser.

In case of navigation redirection, we were trying to go to service worker without checking the service worker entitlement.
Instead, we should check the service worker entitlement and return early in that case.

Covered by manually running minibrowser on simulator.

* NetworkProcess/NetworkConnectionToWebProcess.cpp:
(WebKit::NetworkConnectionToWebProcess::isServiceWorkerAllowed const):
(WebKit::NetworkConnectionToWebProcess::createFetchTask):
(WebKit::NetworkConnectionToWebProcess::scheduleResourceLoad):
* NetworkProcess/NetworkConnectionToWebProcess.h:
* NetworkProcess/NetworkResourceLoader.cpp:
(WebKit::NetworkResourceLoader::continueWillSendRequest):
(WebKit::NetworkResourceLoader::startWithServiceWorker):


Canonical link: https://commits.webkit.org/221800@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@258213 268f45cc-cd09-0410-ab3c-d52691b4dbfc